# app-transcoder

./: .gitignore  .gitmodules  CMakeLists.txt
src/: NLogger.cpp  NLogger.hpp  NMediaBasic.hpp  NMediaFrame.hpp  NPool.hpp  NRegion.hpp  NStr.hpp  NTErrorDefined.hpp  NTranscoder.hpp  NVideoTranscoder.cpp  NVideoTranscoder.hpp  SDLDisplay.cpp  SDLDisplay.hpp  YUVMixer.cpp  YUVMixer.hpp  main.cpp  old_transcoder_main.cpp  yuv_mix_main.cpp
vs-transcoder/: vs-transcoder.sln  vs-transcoder.vcxproj  vs-transcoder.vcxproj.filters
